gccida/g1/init_expr_once
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_expr_once/src/expr.c:684:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( __int64)v2[2]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_expr_once/src/expr.c:700:37: error: use of undeclared identifier 'machine_mode'
if ( ix86_hard_regno_mode_ok( v5, ( machine_mode)i) ) 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_expr_once/src/expr.c:702:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)i, v5); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/init_expr_once/src/obj/expr.o] Error 1
